log
Thu 20 Apr 2023 10:35:55 PM UTC: 
 tests:  1|8
total_score: 0/70
0cee5ff
Fri 21 Apr 2023 12:38:37 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
b240a79
Fri 21 Apr 2023 12:39:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   41 |   temp->root=NULL;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:42:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |   temp->current=temp->root;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:7: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |   temp->lower_than = lower_than;
      |       ^~
treemap.c:40:27: note: referencing an object of size 8 allocated by ‘malloc’
   40 |   TreeMap *temp=(TreeMap*)malloc(sizeof(TreeMap*));
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
26f72cd
Fri 21 Apr 2023 12:45:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
65c1429
Fri 21 Apr 2023 01:34:33 AM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++--------------------------------
 1 file changed, 26 insertions(+), 32 deletions(-)
 tests:  6|7
total_score: 5/70
88234b3
Fri 21 Apr 2023 01:38:50 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|7
total_score: 5/70
5fb4fd4
Fri 21 Apr 2023 12:30:21 PM UTC: 
 treemap.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
 tests:  0|0
1e37c16
Fri 21 Apr 2023 12:33:31 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
268f164
